fix: country list wrap, provider wrap

--- a/components/CountryList/CountryList.scss
+++ b/components/CountryList/CountryList.scss
@@ -16,6 +16,7 @@
     background-color: $secondary;
     border-radius: 100px;
     margin-right: 14px;
+    max-width: 80%;
 
     @include size-md {
       display: block;
